--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
 pandas
-numpy
-gspread>=6.9.0
+numpygspread>=6.9.0
 google-auth>=2.23.0
 google-auth-oauthlib>=1.2.0
 google-auth-httplib2>=0.1.0
