--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.20.0
-pandas>=2.0.0
-numpy>=1.25.0
-gspread>=6.9.0
-google-auth>=2.23.0
-google-auth-oauthlib>=1.2.0
-google-auth-httplib2>=0.1.0
+streamlit
+pandas
+numpy
+gspread
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+
