--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit==1.51.0
-pandas==2.3.3
-numpy==2.2.6
-gspread==6.2.1
-google-auth==2.23.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.1.0
-
+streamlit
+gspread
+pandas
+google-auth
